# VINS-Mono

./: README.md
camera_model/: CMakeLists.txt
config/: vins_rviz_config.rviz
config/euroc/: euroc_config.yaml
config/kaist/: kaist_config.yaml
config/plusai/: plusai_config.yaml  plusai_config.yaml.b6
feature_tracker/: CMakeLists.txt
feature_tracker/cmake/: FindEigen.cmake
feature_tracker/src/: feature_tracker.cpp  feature_tracker_node.cpp
pose_graph/: CMakeLists.txt
pose_graph/src/: keyframe.cpp
vins_estimator/: CMakeLists.txt  package.xml
vins_estimator/launch/: kaist.launch  kaist_rviz.launch  plusai.launch
vins_estimator/src/: estimator.cpp  estimator_node.cpp  parameters.h
vins_estimator/src/data_pub/: kaist_pub.cpp
vins_estimator/src/initial/: solve_5pts.cpp
